[package]
name = "maccel-cli"
version = "0.4.0"
edition = "2021"

[profile.release-with-debug]
inherits = "release"
debug = true

[[bin]]
name = "maccel"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
clap_complete = "4.4.9"
crossterm = "0.27.0"
glob = "0.3.1"
ratatui = "0.25.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tui-input = "*"

[build-dependencies]
cc = "1.2.3"
