[package]
name = "maccel-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "maccel"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }

[build-dependencies]
cc = "1.0.83"
