[package]
name = "usbmouse-cli"
version = "0.1.0"
edition = "2021"

[profile.release-with-debug]
inherits = "release"
debug = true

[[bin]]
name = "maccel-driver-binder"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
clap_complete = "4.4.9"
glob = "0.3.1"
